# MOVA-SE

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
app/: __init__.py  api.py  llm.py  logging_config.py
app/graph/: builder.py  state.py
app/graph/nodes/: README_agent2.md  README_agent3.md  comunicador.py  extratores.py  geocoordinates_fallback.py  geocoordinates_getter.py  infraestrutura.py  meteorologia.py  orquestrador.py  plotter.py  roteamento.py
app/utils/: clima.py  geocoding.py  grafo.py
scripts/: gerar_diagrama_grafo.py
web/: app.js  index.html  style.css
