[project]
name = "mova-se"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dateparser>=1.4.1",
    "fastapi[standard]>=0.139.0",
    "geopy>=2.5.0",
    "langchain>=1.3.13",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
]
